# MarkdownEditor2

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.codegraph/: daemon.pid
prototype/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: styles.css
src/js/: config.js  editor.js  file-ops.js  main.js  menu.js  preview.js  shortcuts.js  statusbar.js  theme.js  toolbar.js  zoom.js
