[package]
name = "MarkdownEditor"
version = "2.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }
url = "2"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = "0.61"

[build-dependencies]
tauri-build = { version = "2", features = [] }
